//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Account {
  id String [pk]
  userId String [not null]
  type String [not null]
  provider String [not null]
  providerAccountId String [not null]
  refresh_token String
  access_token String
  expires_at Int
  token_type String
  scope String
  id_token String
  session_state String
  user User [not null]

  indexes {
    (provider, providerAccountId) [unique]
  }
}

Table Session {
  id String [pk]
  sessionToken String [unique, not null]
  expires DateTime [not null]
  user User [not null]
  userId String [not null]
}

Table User {
  id String [pk]
  name String [default: 'User']
  email String [unique, not null]
  emailVerified DateTime
  image String [default: 'https://avatars.dicebear.com/api/open-peeps/your-custom-seed.svg']
  accounts Account [not null]
  sessions Session [not null]
  Content Content [not null]
  Comment Comment [not null]
  mention Mention [not null]
}

Table VerificationToken {
  id String [pk]
  identifier String [not null]
  token String [unique, not null]
  expires DateTime [not null]

  indexes {
    (identifier, token) [unique]
  }
}

Table Content {
  id String [pk]
  title String [not null]
  description String [not null]
  url String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user User [not null]
  userId String [not null]
  upvotes Int [not null, default: 0]
  downvotes Int [not null, default: 0]
  comments Comment [not null]
  mentions Mention [not null]
  hashtags Hashtag [not null]
  categories Categories [not null]
}

Table Comment {
  id String [pk]
  text String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user User [not null]
  userId String [not null]
  content Content [not null]
  contentId String [not null]
  mentions Mention [not null]
  hashtags Hashtag [not null]
}

Table Mention {
  id String [pk]
  user User [not null]
  userId String [not null]
  comment Comment [not null]
  commentId String [not null]
  Content Content
  contentId String
}

Table Hashtag {
  id String [pk]
  name String [not null]
  content Content [not null]
  contentId String [not null]
  comment Comment [not null]
  commentId String [not null]
}

Table Categories {
  id String [pk]
  name String [not null]
  Content Content [not null]
  contentId String [not null]
}

Ref: Account.userId > User.id [delete: Cascade]

Ref: Session.userId > User.id [delete: Cascade]

Ref: Content.userId > User.id [delete: Cascade]

Ref: Comment.userId > User.id [delete: Cascade]

Ref: Comment.contentId > Content.id [delete: Cascade]

Ref: Mention.userId > User.id [delete: Cascade]

Ref: Mention.commentId > Comment.id [delete: Cascade]

Ref: Mention.contentId > Content.id

Ref: Hashtag.contentId > Content.id [delete: Cascade]

Ref: Hashtag.commentId > Comment.id [delete: Cascade]

Ref: Categories.contentId > Content.id [delete: Cascade]